<resources>
    <string name="app_name">BiciApp</string>
    <string name="prompt_email">Nombre de Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido, "</string>
    <string name="invalid_username">Nombre de usuario inválido</string>
    <string name="invalid_password">Contraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"Autenticación errónea"</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_location_permission">Permiso para acceder a la ubicación</string>
    <string name="text_location_permission">Se necesita permiso para acceder a la ubicación</string>
    <string name="ok">Correcto!</string>
    <string name="mensaje_bicis_estacion">Las bicicletas disponibles de esta estación son:</string>
    <string name="format_date_hint">dd/mm/yyyy</string>
    <string name="entry_startTime">Hora de retiro de la bicicleta</string>
    <string name="format_time_hint">hh:mm</string>
    <string name="btn_msg">Reservar</string>
    <string name="estacion_title">Estación</string>
    <string name="bicicleta_title">Bicicleta</string>
    <string name="date_Title">Fecha para la reserva</string>
    <string name="reserva">Reserva realizada con éxito.</string>
    <string name="hora_retiro_title">Hora de retiro de la bicicleta</string>
    <string name="hora_entrega_bicicleta_title">Hora de entrega de la bicicleta</string>
    <string name="instructions_take_out_title">Instrucciones para el retiro</string>
    <string name="step_one_instructions_to">1. Su bicicleta está disponible en la estación\u0020</string>
    <string name="step_two_instructions_to">2. Su bicicleta contiene el código:\u0020</string>
    <string name="step_3_instructions_to">"3. El uso de su bicicleta es el:\u0020"</string>
    <string name="step_4_instructions_to">"4. Pase su tarjeta por el lector para que el candado se abra, no olvide devolver su bicicleta a las\u0020"</string>
    <string name="step_4_1_instructions_to">"4. Pase su tarjeta por el lector para que el candado\u0020"</string>
    <string name="step_4_2_instructions_to">"\u0020se abra, no olvide devolver su bicicleta a las\u0020"</string>
    <string name="ubicacion_estacion">\u0020en la dirección:\u0020</string>
    <string name="modelo_bicicleta">\u0020de modelo:\u0020</string>
    <string name="hora_entrega_bici">\u0020desde las</string>
    <string name="button_retirar_title">Retirar</string>
    <string name="instrucciones_deliver_title">Instrucciones entrega de bicicleta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="entrega_bici">Recuerde entregar su bicicleta a las</string>
    <string name="title_activity_informacion">Información BiciApp</string>
    <string name="large_text">
        "Información de Usuario para BiciApp.\n\n"

        "Esta aplicación está realizada para la reserva de bicicletas. Para que el sistema funcione, "
        "tanto las bicicletas como los usuarios deben contar con tarjetas identificadoras, provistas"
        "por BiciApp.\n"
        "Una vez que el usuario haya obtenido su tarjeta identificadora, es posible realizar reservas."
        "A continuación se muestran una serie de pasos para el uso de una bicicleta: \n"
        "1. Seleccionar una estación de la cual se requiera una bicicleta.\n"
        "2. Seleccionar una bicicleta. El stock de las bicicletas depende de la demanda de los usuarios.\n"
        "3. Seleccionar la hora y fecha que se pretende utilizar la bicicleta. Realizar una reserva.\n"
        "4. Retirar la bicicleta dentro de la hora y fechas de reserva. Para ello es necesario accionar el botón retirar"
        "en la aplicación y pasar el identificador de usuario por el lector de tarjetas de usuario presente en"
        "cada estación. Se tendrá 10 seg aproximadamente para retirar la bicicleta del candado.\n"

        "5. Utilizar la bicicleta.\n"
        "6. Entregar la bicicleta antes de la hora acordada. Para ello accionar, en la aplicación móvil,"
        "accionar el botón Entregar, el cual mostrará un mapa en donde se seleccionará la estación en donde se pretende"
        "entregar la bicicleta. Se asignará un candado en el cual se deberá colocar la bicicleta, luego, se deberá pasar la tarjeta"
        "de identificación por el lector y esté se encargará de procesar y verficar la entrega."
        "\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
